--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "manhattan",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "extracts CSS colors as SCSS variables",
-  "main": "index.js",
+  "main": "manhattan.js",
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha"
+    "test": "./node_modules/mocha/bin/mocha",
+    "test-on-travis": "./node_modules/.bin/mocha -R mocha-lcov-reporter > ./node_modules/coveralls/bin/coveralls.js"
   },
   "repository": {
     "type": "git",
@@ -18,9 +19,6 @@
     "extract",
     "extractor"
   ],
-  "main": {
-    "manhattan": "manhattan.js"
-  },
   "bin": {
     "manhattan": "index.js"
   },
