--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "manhattan.js",
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha",
-    "test-on-travis": "./node_modules/.bin/mocha -R mocha-lcov-reporter > ./node_modules/coveralls/bin/coveralls.js"
+    "test-on-travis": "./node_modules/.bin/mocha -R mocha-lcov-reporter | ./node_modules/coveralls/bin/coveralls.js"
   },
   "repository": {
     "type": "git",
